# nsfwpy

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  RELEASE.md  build.bat  build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: all_in_one.yml  build_executables.yml  build_release.yml  docker_build.yml  pypi_publish.yml
nsfwpy/: __init__.py  api.py  cli.py  nsfw.py  nsfw_tflite.py  server.py
