[project]
name = "nsfwpy"
version = "0.1.4.4"
description = "基于OpenNSFW的图像内容检测工具"
readme = "README.md"
authors = [
    { name = "YiMing", email = "1790233968@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy<=1.26.4",
    "pillow<=11.1.0",
    "fastapi<=0.115.11",
    "uvicorn<=0.34.0",
    "onnxruntime<=1.21.0",
    "python-multipart<=0.0.20",
    "opencv-python-headless<=4.11.0.86",
]

[project.scripts]
nsfwpy = "nsfwpy.server:main"

[project.urls]
Homepage = "https://github.com/HG-ha/nsfwpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nsfwpy"]
