[project]
name = "nsfwpy"
version = "0.1.5"
description = "A lightweight Python library for NSFW content detection using ONNX models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "onnxruntime>=1.15.0",
    "python-multipart>=0.0.6",
    "opencv-python-headless>=4.8.0",
    "nuitka>=2.8.9",
]
